--- a/public/index.html
+++ b/public/index.html
@@ -17,4 +17,5 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6651671096244664" crossorigin="anonymous"></script>
 </html>
